# Apogee

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
contracts/: Cargo.toml
contracts/collateral/: Cargo.toml
contracts/collateral/src/: lib.rs  test.rs
contracts/interest_rate_model/: Cargo.toml
contracts/interest_rate_model/src/: lib.rs
contracts/interest_rate_model/test_snapshots/test/: test_initialize.1.json  test_rate_above_optimal_zone2.1.json  test_rate_at_100_percent.1.json  test_rate_at_90_percent.1.json  test_rate_at_95_percent.1.json  test_rate_at_99_percent.1.json  test_rate_at_optimal_utilization.1.json  test_rate_at_zero_utilization.1.json  test_rate_below_optimal.1.json  test_rate_curve_is_monotonic.1.json  test_supply_rate.1.json
contracts/lending_pool/: Cargo.toml
contracts/lending_pool/src/: lib.rs  test.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs  test.rs
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs  test.rs
contracts/pool/test_snapshots/test/: test_borrow.1.json  test_borrow_exceeds_ltv.1.json  test_deposit_collateral.1.json  test_get_market_info.1.json  test_get_user_position.1.json  test_initialize.1.json  test_initialize_twice.1.json  test_repay.1.json  test_repay_full.1.json  test_supply.1.json  test_withdraw.1.json  test_withdraw_collateral.1.json
contracts/price_oracle/: Cargo.toml
contracts/price_oracle/src/: lib.rs
docs/: ARCHITECTURE.md  GETTING_STARTED.md
frontend/: README.md  env.local.example  package.json  tsconfig.tsbuildinfo
scripts/: ADD_CORRECT_TRUSTLINE.md  ADD_TRUSTLINE.md  README.md  add_trustline.ts  add_trustline_freighter.html  add_trustline_simple.html  config.ts  deploy_all.ts  deployment.json  fund_user.ts  generate_trustline_xdr.ts  package-lock.json  package.json  quick_add_trustline.html  seed_pool.ts  setup_tokens.ts  tsconfig.json  (+2 more)
(+197 files in other folders)
