[workspace]
resolver = "2"
members = [
    "pool",
    "interest_rate_model",
    "price_oracle",
]

[workspace.dependencies]
soroban-sdk = "21.7.6"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

